# botbrowser

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
js/: package.json  pnpm-lock.yaml
python/: README.md  pyproject.toml
python/botbrowser/: __init__.py  cleaner.py  client.py  converter.py  core.py  fetcher.py  models.py
python/tests/: test_core.py
