[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botbrowser"
version = "0.1.0"
description = "Token-efficient web content extraction for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["web-scraping", "content-extraction", "llm", "ai-agents", "token-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "trafilatura>=1.12.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/botbrowser/botbrowser"
Repository = "https://github.com/botbrowser/botbrowser"
Issues = "https://github.com/botbrowser/botbrowser/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["botbrowser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
